--- a/src/main/sample.fxml
+++ b/src/main/sample.fxml
@@ -1,8 +1,86 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="main.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Controller">
+   <children>
+      <TextField prefHeight="83.0" prefWidth="600.0" />
+      <HBox prefHeight="378.0" prefWidth="600.0">
+         <children>
+            <ListView prefHeight="200.0" prefWidth="200.0" />
+            <GridPane prefHeight="348.0" prefWidth="218.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="140.0" prefWidth="107.0" text="7" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="170.0" prefWidth="112.0" text="8" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="239.0" prefWidth="91.0" text="9" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="242.0" prefWidth="112.0" text="4" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="202.0" prefWidth="110.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="207.0" prefWidth="112.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="148.0" prefWidth="99.0" text="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="203.0" prefWidth="186.0" text="2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="465.0" prefWidth="370.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="164.0" prefWidth="136.0" text="0" GridPane.rowIndex="3" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="145.0" prefWidth="105.0" text="." GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Button mnemonicParsing="false" onMouseClicked="#clickNummberblock" prefHeight="162.0" prefWidth="97.0" text="-" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+               </children>
+            </GridPane>
+            <VBox prefHeight="348.0" prefWidth="182.0">
+               <children>
+                  <GridPane prefHeight="175.0" prefWidth="124.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="166.0" prefWidth="474.0" text="Enter" />
+                        <Button mnemonicParsing="false" prefHeight="187.0" prefWidth="522.0" text="C" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" prefHeight="114.0" prefWidth="311.0" text="CE" GridPane.rowIndex="2" />
+                     </children>
+                  </GridPane>
+                  <GridPane prefHeight="179.0" prefWidth="124.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="125.0" prefWidth="155.0" text="1/x" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" prefHeight="128.0" prefWidth="180.0" text="x&lt;–&gt;y" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" prefHeight="127.0" prefWidth="182.0" text="+" />
+                        <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="182.0" text="*" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" prefHeight="84.0" prefWidth="142.0" text="/" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" prefHeight="115.0" prefWidth="127.0" text="–" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+   </children>
+</VBox>
