--- a/src/main/sample.fxml
+++ b/src/main/sample.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,10 +11,10 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Controller">
    <children>
-      <TextField prefHeight="83.0" prefWidth="600.0" />
+      <TextField fx:id="textField" prefHeight="83.0" prefWidth="600.0" />
       <HBox prefHeight="378.0" prefWidth="600.0">
          <children>
-            <ListView prefHeight="200.0" prefWidth="200.0" />
+            <TextArea fx:id="textArea" prefHeight="200.0" prefWidth="200.0" />
             <GridPane prefHeight="348.0" prefWidth="218.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -54,9 +54,9 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="166.0" prefWidth="474.0" text="Enter" />
-                        <Button mnemonicParsing="false" prefHeight="187.0" prefWidth="522.0" text="C" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" prefHeight="114.0" prefWidth="311.0" text="CE" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" onMouseClicked="#clickOptionblock" prefHeight="166.0" prefWidth="474.0" text="Enter" />
+                        <Button mnemonicParsing="false" onMouseClicked="#clickOptionblock" prefHeight="187.0" prefWidth="522.0" text="C" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" onMouseClicked="#clickOptionblock" prefHeight="114.0" prefWidth="311.0" text="CE" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
                   <GridPane prefHeight="179.0" prefWidth="124.0">
@@ -70,12 +70,12 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="125.0" prefWidth="155.0" text="1/x" GridPane.rowIndex="2" />
-                        <Button mnemonicParsing="false" prefHeight="128.0" prefWidth="180.0" text="x&lt;–&gt;y" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Button mnemonicParsing="false" prefHeight="127.0" prefWidth="182.0" text="+" />
-                        <Button mnemonicParsing="false" prefHeight="124.0" prefWidth="182.0" text="*" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" prefHeight="84.0" prefWidth="142.0" text="/" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" prefHeight="115.0" prefWidth="127.0" text="–" GridPane.columnIndex="1" />
+                        <Button mnemonicParsing="false" onMouseClicked="#clickOperatorblock" prefHeight="125.0" prefWidth="155.0" text="1/x" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" onMouseClicked="#clickOperatorblock" prefHeight="128.0" prefWidth="180.0" text="x&lt;–&gt;y" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Button mnemonicParsing="false" onMouseClicked="#clickOperatorblock" prefHeight="127.0" prefWidth="182.0" text="+" />
+                        <Button mnemonicParsing="false" onMouseClicked="#clickOperatorblock" prefHeight="124.0" prefWidth="182.0" text="*" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" onMouseClicked="#clickOperatorblock" prefHeight="84.0" prefWidth="142.0" text="/" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" onMouseClicked="#clickOperatorblock" prefHeight="115.0" prefWidth="127.0" text="–" GridPane.columnIndex="1" />
                      </children>
                   </GridPane>
                </children>
